# Ultimate-Tic-Tac-Tao

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  main.cpp  makefile  rebuild.ps1  run.ps1
include/: Tic_Tac_Toe.hpp  Tic_Tac_Toe_V2.hpp  Tic_Tac_Toe_V3.hpp  Ultimate_Tic_Tac_Toe.hpp  game.hpp  mcts.hpp  move.hpp  negamax.hpp  player.hpp  rand.hpp  random_move.hpp  ttt.hpp  user_move.hpp  uttt.hpp
scripts/: build.ps1  clean.ps1  rebuild.ps1  run.ps1  test.ps1
src/: Tic_Tac_Toe.cpp  Ultimate_Tic_Tac_Toe.cpp  main.cpp  mcts.cpp  move.cpp  negamax.cpp  player.cpp  rand.cpp  ttt.cpp  uttt.cpp
src/inc/: game.hpp  mcts.hpp  move.hpp  negamax.hpp  player.hpp  rand.hpp  timer.hpp  ttt.hpp  uttt.hpp
tests/: test_Tic_Tac_Toe.cpp  test_Tic_Tac_Toe_V2.cpp  test_Tic_Tac_Toe_V3.cpp  test_Ultimate_Tic_Tac_Toe.cpp  test_main.cpp  test_mcts.cpp  test_negamax.cpp  test_random_move.cpp
